flecs_ecs/examples/flecs/snapshots/test@system_basics.snap
---
source: flecs_ecs/examples/flecs/z_snapshot_test.rs
expression: str_output
---
"e1: { 11, 22 }\ne2: { 13, 24 }\n"
