flecs_ecs/examples/flecs/snapshots/test@system_custom_phases.snap
---
source: flecs_ecs/examples/flecs/z_snapshot_test.rs
expression: str_output
---
"system GameSystem\nsystem PhysicsSystem\nsystem CollisionSystem\n"
