flecs_ecs/examples/flecs/snapshots/test@system_custom_phases_no_builtin.snap
---
source: flecs_ecs/examples/flecs/z_snapshot_test.rs
expression: self.str
---
- system GameSystem
- system PhysicsSystem
- system CollisionSystem
