flecs_ecs/examples/flecs/snapshots/test@system_custom_pipeline.snap
---
source: flecs_ecs/examples/flecs/z_snapshot_test.rs
expression: str_output
---
"System with Physics ran!\n"
