flecs_ecs/examples/flecs/snapshots/test@system_custom_runner.snap
---
source: flecs_ecs/examples/flecs/z_snapshot_test.rs
expression: str_output
---
"Move begin\ne1: { 11, 22 }\ne2: { 13, 24 }\nMove end\n"
