flecs_ecs/examples/flecs/snapshots/test@system_pipeline.snap
---
source: flecs_ecs/examples/flecs/system_pipeline.rs
expression: self.str
---
- "e1: { 11, 22 }"
- "e2: { 13, 24 }"
