flecs_ecs/examples/flecs/snapshots/test@system_startup_system.snap
---
source: flecs_ecs/examples/flecs/z_snapshot_test.rs
expression: str_output
---
"Startup\nUpdate\nUpdate\n"
