flecs_ecs/examples/flecs/snapshots/test@system_sync_point.snap
---
source: flecs_ecs/examples/flecs/system_sync_point.rs
expression: self.str
---
- "e1: { 11, 22 }"
- "e2: { 11, 22 }"
